# rubypoint-task

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.tex
.github/workflows/: compile-latex.yaml
app/: main.cpp
include/rubypoint_task/: rubypoint_task.h
src/: main.cpp
test/: main.cpp
